# duckdb-wasm-axum-example

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  rspack.config.ts  tsconfig.json
frontend/: app.ts
src/: main.rs
src/modules/: handlers.rs
src/modules/types/: templates.rs
static/: scripts.js
templates/: index.html
